tests/ui/inference/issue-71309.stderr
error[E0308]: `?` operator has incompatible types
  --> $DIR/issue-71309.rs:2:18
   |
LL |     let y: u32 = x?;
   |                  ^^ expected `u32`, found `i32`
   |
   = note: `?` operator cannot convert from `i32` to `u32`
help: you can convert an `i32` to a `u32` and panic if the converted value doesn't fit
   |
LL |     let y: u32 = x?.try_into().unwrap();
   |                    ++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
